Extended EmailController Exception Handling, simplified EmailService interface, finished EmailServiceImpl, removed unnecessary files, added unit tests